--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.username=zhnyuren
-spring.datasource.password=zhnyuren
-spring.datasource.url=jdbc:mysql://localhost:3306/photo_app
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username = zhnyuren
+spring.datasource.password = zhnyuren
+spring.datasource.url = jdbc:mysql://localhost:3306/photo_app
+spring.jpa.hibernate.ddl-auto = update
+tokenSecret = ave3yi9tsh2
